Fix deprecated ConsumerRecords constructor calls and lossy conversion
  - Update all ConsumerRecords constructors to use the non-deprecated API by
    adding Map.of() as the second parameter
  - Fix lossy conversion in KafkaMessageListenerContainer by adding explicit
    cast to long when multiplying idleEventInterval by containerProperties.getIdleBeforeDataMultiplier()
    which is of type double.

Signed-off-by: Soby Chacko <soby.chacko@broadcom.com>